# per4m

./: .clang-tidy  .gitignore  CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  KDE.cpp  KDE.h  ProbabilisticFilter.cpp  ProbabilisticFilter.h  ProbabilisticStop.cpp  ProbabilisticStop.h  main.cpp
cmake/: per4mConfig.cmake.in
include/: ProbabilisticStop.h
include/per4m/: Bandwidth.h  CircularBuffer.h  KDE.h  ProbabilisticFilter.h  ProbabilisticStop.h  Ribeiro.h
include/per4m/detail/: CircularBuffer.h
src/: Bandwidth.cpp  CircularBuffer.cpp  KDE.cpp  ProbabilisticFilter.cpp  ProbabilisticStop.cpp  Ribeiro.cpp
test/: .gitignore  CMakeLists.txt  test.cpp
